--- a/index.html
+++ b/index.html
@@ -4,8 +4,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@800&display=swap" rel="stylesheet">
+
+    <link rel="stylesheet" href="style/style.css">
+
+
 </head>
 <body>
-    
+  <header>
+    <nav>
+        <h3 class="nav-title">Em<span class="text-primary">o</span>n</h3>
+        <ul>
+           <li><a href="">Portfolio</a></li>
+           <li><a href="">Blog</a></li>
+           <li><button class="btm-primary">Hire Me</button></li>
+        </ul>
+    </nav>
+  </header>
+  <main>
+
+  </main>
+  <footer>
+
+  </footer>
 </body>
 </html>
