--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <header>
+  <header class="header-class">
     <nav>
         <h3 class="nav-title">Em<span class="text-primary">o</span>n</h3>
         <ul>
@@ -22,9 +22,46 @@
            <li><button class="btm-primary">Hire Me</button></li>
         </ul>
     </nav>
+    <div class="banner">
+        
+      <div class="banner-content">
+          <h3 class="banner-greet">Hi, I  am</h3>
+          <h1 class="banner-title">Tanvir Emon</h1>
+          <p class="banner-des">Shot what able cold new see hold.Friendly as an betrayed formerly he. Morning because as to society behaved moments.</p>
+          <button class="btm-primary">Download CV</button>
+          <button class="btm-primary">Contact</button>
+      </div>
+
+      <img class="dp" src="./images/1657730396998-01-removebg-preview.png" alt="">
+
+    </div>
   </header>
   <main>
+    <section class="about">
+        <h3 class="section-titie">About Me</h3> 
+        <p class="sec-des">
+            I, m a designer & developer with a passion for web design. I enjoy developing simple, clean and slick websites that provide real value to the end user. Thousands of clients have procured exceptional resulfs while working with me. Delivering work within time and budget which meets clients requirements in our mata.
+        </p>
+        <div class="about-info-container">
+            <div class="about-info">
+                <h4 class="info-title">Name: </h4>
+                <p class="info-description">Md. Tanvir Ahammad Emon</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Email:</h4>
+                <p class="info-description">tanviremon121@gmail.com</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">Date of birth:</h4>
+                <p class="info-description">11 March 2003</p>
+            </div>
+            <div class="about-info">
+                <h4 class="info-title">From:</h4>
+                <p class="info-description">Pabna, Bangladesh</p>
+            </div>
 
+        </div>
+    </section>
   </main>
   <footer>
 
