--- a/index.html
+++ b/index.html
@@ -62,6 +62,105 @@
 
         </div>
     </section>
+    <section>
+        <h3 class="sec-w">What I do</h3>
+        <p id="widd" class="sec-des">I have more than 10 years experience building software for clients all over the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to find out more about my experience? Check out my online resume and project portfolio.
+        </p>
+
+        <div class="skills-con">
+            <div class="skill">
+                <img src="./images/icons/js.png" alt="">
+                <h3 class="skill-title">Vanilla JavaScript</h3>
+                <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/react.png" alt="">
+                <h3 class="skill-title">React</h3>
+                <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/nodejs.png" alt="">
+                <h3 class="skill-title">Node.js</h3>
+                <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="skill">
+                <img src="images/icons/mongo.png" alt="">
+                <h3 class="skill-title">MongoDB</h3>
+                <p class="skill-des">List skill/technologies here. You can change the icon above to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+    </section>
+<section>
+    <h3 class="sec-w">A summary of My resume</h3>
+
+    <div class="res-col">
+        <h3 class="res-col-ti">My Education</h3>
+        <div class="resume-item">
+            <h2 class="resume-item-ti">Master in Computer Engineering</h2>
+            <h3 class="resume-item-ins">Harvard University / 2015 - 2017</h3>
+            <p>
+                <div class="resume-item-des">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item-ti">Master in Computer Engineering</h2>
+            <h3 class="resume-item-ins">Master in Computer Engineering</h3>
+            <p>
+                <div class="resume-item-des">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item-ti">Master in Computer Engineering</h2>
+            <h3 class="resume-item-ins">Harvard University / 2015 - 2017</h3>
+            <p>
+                <div class="resume-item-des">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </p>
+        </div>
+
+
+
+
+
+    </div>
+    <div class="res-col">
+        <h3 class="res-col-ti">My Experience</h3>
+        <div class="resume-item">
+            <h2 class="resume-item-ti">Master in Computer Engineering</h2>
+            <h3 class="resume-item-ins">Harvard University / 2015 - 2017</h3>
+            <p>
+                <div class="resume-item-des">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item-ti">Master in Computer Engineering</h2>
+            <h3 class="resume-item-ins">Master in Computer Engineering</h3>
+            <p>
+                <div class="resume-item-des">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </p>
+        </div>
+        <hr>
+        <div class="resume-item">
+            <h2 class="resume-item-ti">Master in Computer Engineering</h2>
+            <h3 class="resume-item-ins">Harvard University / 2015 - 2017</h3>
+            <p>
+                <div class="resume-item-des">List skill/technologies here. You can change the icon above 
+                    to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</div>
+            </p>
+        </div>
+    </div>
+
+
+
+
+</section>
   </main>
   <footer>
 
