finised resume section

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </section>
 <section>
     <h3 class="sec-w">A summary of My resume</h3>
-
+<div class="resume-con">
     <div class="res-col">
         <h3 class="res-col-ti">My Education</h3>
         <div class="resume-item">
@@ -156,9 +156,11 @@
             </p>
         </div>
     </div>
+</div>
 
-
-
+    <div class="download-cv">
+        <button class="btm-primary">Download CV</button>
+    </div>
 
 </section>
   </main>
